RTFACT-1964 - Assure existence of minimum and maximum heap and perm in run script