@@ -26,6 +26,24 @@ if [ -z "$ARTIFACTORY_HOME" ]; then
     ARTIFACTORY_HOME=`dirname "$0"`/..
 fi
 
+# Verify minimal JVM props are set
+hasMinHeapSize=`echo "$JAVA_OPTIONS" | grep \\-Xms`
+if [ -z "$hasMinHeapSize" ]; then
+  JAVA_OPTIONS="$JAVA_OPTIONS -Xms256m"
+fi
+hasMaxHeapSize=`echo "$JAVA_OPTIONS" | grep \\-Xmx`
+if [ -z "$hasMaxHeapSize" ]; then
+  JAVA_OPTIONS="$JAVA_OPTIONS -Xmx512g"
+fi
+hasMinPermSize=`echo "$JAVA_OPTIONS" | grep \\-XX:PermSize`
+if [ -z "$hasMinPermSize" ]; then
+  JAVA_OPTIONS="$JAVA_OPTIONS -XX:PermSize=128m"
+fi
+hasMaxPermSize=`echo "$JAVA_OPTIONS" | grep \\-XX:MaxPermSize`
+if [ -z "$hasMaxPermSize" ]; then
+  JAVA_OPTIONS="$JAVA_OPTIONS -XX:MaxPermSize=128m"
+fi
+
 JAVA_OPTIONS="$JAVA_OPTIONS -Djetty.home=$ARTIFACTORY_HOME -Dartifactory.home=$ARTIFACTORY_HOME"
 
 LIB_DIR=$ARTIFACTORY_HOME/lib
